<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdsu.vyshak.hometownchat.FormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:visibility="gone" />

            <TextView
                android:text="@string/NickName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/textnickname"
                android:nextFocusForward="@+id/email"
                android:layout_marginTop="10dp"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/hint_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:nextFocusForward="@+id/password"
                android:layout_marginTop="10dp"
                tools:ignore="LabelFor" />


            <TextView
                android:text="@string/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password"
                android:nextFocusForward="@+id/spinner_country"
                android:layout_marginTop="10dp"
                tools:ignore="LabelFor" />

            <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>


            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingTop="10dp" />

            <TextView
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>


            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingTop="10dp" />

            <TextView
                android:text="@string/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:ems="10"
                android:id="@+id/city"
                android:nextFocusForward="@+id/spinner_country"
                android:layout_marginTop="10dp"
                tools:ignore="LabelFor" />


            <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"
                tools:ignore="RtlSymmetry" />


            <Spinner
                android:id="@+id/spinner_year"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:paddingTop="10dp"
                android:spinnerMode="dropdown" />

            <Button
                android:id="@+id/locate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/locate_on_the_map"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:text="@string/latitude"
                android:textAlignment="center"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/lat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:nextFocusForward="@+id/spinner_country"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:text="@string/longitude"
                android:textAlignment="center"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/lon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"
                android:nextFocusForward="@+id/spinner_country"
                tools:ignore="LabelFor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:textAlignment="center"
                    tools:ignore="InefficientWeight" />

                <!--<Button
                    android:id="@+id/continueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="@string/continuebutton"
                    app:srcCompat="@android:drawable/ic_media_next" />-->

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>
