<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp" android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="left"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/name"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:text="@string/NickName"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black" />


        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textAlignment="textStart"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:id="@+id/state"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textAlignment="textStart"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textAlignment="textStart"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:foregroundGravity="right"
        android:gravity="right"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <ImageView
            android:id="@+id/item_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:foregroundGravity="right"
            android:src="@drawable/ic_account_box_black_24px"
            tools:ignore="ContentDescription" />

    </LinearLayout>



</LinearLayout>