<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.sdsu.vyshak.hometownchat.SearchFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:ignore="UselessParent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/find_friends_by_country_state_city_or_year_at_sdsu"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp"
                android:paddingTop="20dp"
                android:textAlignment="center"/>


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:id="@+id/spinner_search_country" />

            <TextView
                android:text="@string/state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/spinner_search_state"
                android:ems="10"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"/>


            <TextView
                android:text="@string/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_marginTop="10dp"
                android:paddingTop="10dp"
                android:textAlignment="center"
                tools:ignore="RtlSymmetry" />


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_search_year"
                android:spinnerMode="dropdown"
                android:ems="10"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/find"
                android:textAlignment="center" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>
